# v2-nespreso

./: .gitignore  00_read_before_resuming.20260615.txt  02_handoff_future_agents.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  handoff.md  phase0.txt  phase1.txt  phase2.txt  phase3.txt  phase4.txt  phase5.txt  phase6.txt  phase7.txt  phase8.txt  phase9.txt  plan.md  pyproject.toml  singleFileModel_SAT_stats4verticalProj_meeting20260203.py
configs/: default.yaml
docs/: CONFIG_DATASET.md  HOWTO.md  NEW_BASIN.md  PICKLE_MIGRATION.md  POST_ALPHA_REVIEW.md
eng-principles-pack/: INDEX.md  README.md
eng-principles-pack/hooks/: post-bugfix.md  pre-commit-checklist.md  pre-merge-numerical.md  pre-pr-checklist.md
eng-principles-pack/skills/: ai-code-verification.md  (+7 more)
experiments/: compare_legacy_nespreso.py  density_stability.py  depth_interval_stats.py  glider_mission.py  monthly_distribution.py  pca_regression_baseline.py  run_all.py  steric_depth_stats.py  train.py  validation_maps.py
legacy/: SOURCES.md
notebooks/: NeSPReSO_cookbook.ipynb
old_handoffs/: 01_prompt_skynet.md  03_handoff_phase4_dataset_e8e07f2.md
tests/: conftest.py  monolith_loader.py  test_analysis.py  test_analysis_density.py  test_analysis_depth_stats.py  test_argo_loader.py  test_characterization.py  test_config_paths.py  test_experiment_helpers.py  test_geo_time.py  test_inference.py  test_losses.py  test_mlr.py  test_pca_inverse.py  test_prepare_inputs.py  test_satellite_loader.py  test_smoke.py  test_splits.py  test_viz.py  test_viz_coefficients.py  test_viz_fields.py
(+91 files in other folders)
